# RAD

./: LICENSE  README.md  pyproject.toml
.github/workflows/: black_linter.yml  unit_tests.yml
examples/: angles_print.py
rad/: __init__.py  quadrature.py
test/: test_quadrature.py
