[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rad"
version = "0.0.1"

authors = [
  { name = "Joanna Morgan", email = "morgan83@llnl.gov" },
]

description = "Some rad programming with some rad people"
readme = "README.md"
requires-python = ">3.10"
license = { file = "LICENSE" }

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS",
]

dependencies = [
  "numpy"
]